[gd_scene load_steps=5 format=2]

[ext_resource path="res://Box.tscn" type="PackedScene" id=1]
[ext_resource path="res://Row.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 208, 96 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 208, 96 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 208, 96 )
shape = SubResource( 1 )

[node name="Box1" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Box2" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 156, 96 )

[node name="Box3" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 260, 96 )

[node name="Box4" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 364, 96 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 208, 96 )
shape = SubResource( 2 )
